--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:next": "next build",
     "build:temporal": "tsc --build ./temporal/tsconfig.json",
     "start": "npm run dev",
+    "start:next": "next start",
     "start:worker": "node ./temporal/lib/worker",
     "lint": "eslint ."
   },
